--- a/index.html
+++ b/index.html
@@ -8311,5 +8311,220 @@
 
 <!// AJUTES - OT GLOBAL (OT sem zeros a esquerda) FIM ---->
 
+<!//BLOCK IP>
+
+<style>
+  /* Overlay de bloqueio por IP */
+  #ipBlocker{
+    position:fixed; inset:0; z-index:2147483647;
+    display:none; place-items:center;
+    background:#0b1220;
+    color:#eaf0ff; font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+  }
+  #ipBlocker.show{ display:grid }
+  #ipBlocker .box{
+    max-width:680px; width:min(92vw,680px);
+    background:linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.02));
+    border:1px solid rgba(255,255,255,.12);
+    border-radius:16px; padding:18px 20px; text-align:center;
+    box-shadow:0 18px 60px rgba(0,0,0,.6);
+  }
+  #ipBlocker h2{ margin:0 0 8px 0; font-size:20px }
+  #ipBlocker p{ margin:6px 0; color:#c7d2fe }
+  #ipBlocker .muted{ color:#94a3b8; font-size:.9rem }
+  #ipBlocker .row{ margin-top:12px; display:flex; justify-content:center; gap:10px; flex-wrap:wrap }
+  #ipBlocker .btn{
+    appearance:none; cursor:pointer;
+    border-radius:10px; padding:10px 14px; font-weight:600;
+    background:#0d1628; border:1px solid rgba(255,255,255,.12); color:#eaf0ff;
+  }
+  #ipBlocker .btn.primary{ background:linear-gradient(180deg,#2a60ff,#1b47c9); border-color:transparent }
+</style>
+
+<div id="ipBlocker" aria-hidden="true">
+  <div class="box">
+    <h2>Acesso bloqueado</h2>
+    <p>Seu IP não está autorizado para acessar esta aplicação.</p>
+    <p class="muted">IP detectado: <span id="ipBlockerClientIp">—</span></p>
+    <p class="muted">Se você acha que isso é um engano, contate o time de TI.</p>
+    <div class="row">
+      <button class="btn" id="ipBlockerRetry">Tentar novamente</button>
+      <button class="btn primary" id="ipBlockerReload">Recarregar</button>
+    </div>
+  </div>
+</div>
+
+<script>
+(function(){
+  "use strict";
+
+  /* =======================
+   * CONFIG – AJUSTE AQUI
+   * ======================= */
+  const GH = {
+    owner:  'JPVectorsitem',
+    repo:   'LINKS-img',
+    branch: 'main',
+    path:   'segurancaallow_ip' // <- caminho do .txt com os IPs/ranges permitidos
+  };
+
+  // Permite trabalhar em redes locais (dev) sem travar?
+  const ALLOW_LOCAL = true; // 127.0.0.1 / 10.* / 172.16–31.* / 192.168.* (apenas quando ip público não é detectado)
+  // Timeout total do check (ms) — falhou -> bloqueia
+  const CHECK_TIMEOUT = 9000;
+
+  /* =======================
+   * UTILS
+   * ======================= */
+  function getToken(){
+    try{
+      const saved = JSON.parse(localStorage.getItem('wv_gh_cfg')||'{}');
+      return (window.gh && window.gh.token) || saved.token || '';
+    }catch{ return (window.gh && window.gh.token) || ''; }
+  }
+  function ghHeaders(token, extra={}){
+    return {
+      'Accept':'application/vnd.github+json',
+      'X-GitHub-Api-Version':'2022-11-28',
+      ...(token ? {'Authorization':`Bearer ${token}`} : {}),
+      ...extra
+    };
+  }
+
+  // Busca allowlist pela URL RAW (pública). Se falhar, tenta API (precisa token).
+  async function fetchAllowList(){
+    const rawUrl = `https://raw.githubusercontent.com/${encodeURIComponent(GH.owner)}/${encodeURIComponent(GH.repo)}/${encodeURIComponent(GH.branch)}/${GH.path}`;
+    // 1) tenta RAW
+    try{
+      const r = await fetch(rawUrl, { cache:'no-store' });
+      if (r.ok) return await r.text();
+    }catch{}
+    // 2) API do GitHub
+    const token = getToken();
+    if (!token) throw new Error('Repo privado e sem token.');
+    const apiUrl = `https://api.github.com/repos/${encodeURIComponent(GH.owner)}/${encodeURIComponent(GH.repo)}/contents/${encodeURIComponent(GH.path)}?ref=${encodeURIComponent(GH.branch)}`;
+    const r = await fetch(apiUrl, { headers: ghHeaders(token) });
+    if (!r.ok) throw new Error('Falha ao ler allow_ip.txt ('+r.status+')');
+    const j = await r.json();
+    if (!j || !j.content) throw new Error('Conteúdo inválido.');
+    // base64 -> utf8
+    const bin = atob(j.content);
+    const bytes = new Uint8Array(bin.length);
+    for (let i=0;i<bin.length;i++) bytes[i]=bin.charCodeAt(i);
+    return new TextDecoder().decode(bytes);
+  }
+
+  async function fetchClientIp(){
+    const r = await fetch('https://api.ipify.org?format=json', { cache:'no-store' });
+    if (!r.ok) throw new Error('ipify falhou');
+    const j = await r.json();
+    return j && j.ip ? String(j.ip) : '';
+  }
+
+  function parseRules(text){
+    return (text||'')
+      .split(/\r?\n/)
+      .map(s => s.trim())
+      .filter(s => s && !s.startsWith('#')); // ignora comentários
+  }
+
+  // IPv4 helpers
+  function ipV4toInt(ip){
+    const m = String(ip||'').match(/^(\d+)\.(\d+)\.(\d+)\.(\d+)$/);
+    if (!m) return null;
+    const a = [+m[1], +m[2], +m[3], +m[4]];
+    if (a.some(x => x<0 || x>255 || !Number.isInteger(x))) return null;
+    return ((a[0]<<24)>>>0) + (a[1]<<16) + (a[2]<<8) + a[3];
+  }
+  function cidrMatch(ip, cidr){
+    const m = String(cidr||'').match(/^(\d+\.\d+\.\d+\.\d+)\/(\d{1,2})$/);
+    if (!m) return false;
+    const base = ipV4toInt(m[1]); const bits = +m[2];
+    const val = ipV4toInt(ip);
+    if (base==null || val==null || bits<0 || bits>32) return false;
+    const mask = bits===0 ? 0 : (~((1<<(32-bits))-1))>>>0;
+    return (val & mask) === (base & mask);
+  }
+  function wildcardMatch(ip, mask){
+    // ex.: 177.23.*.*  ou  10.10.1.*
+    const a = String(ip||'').split('.'); const b = String(mask||'').split('.');
+    if (a.length!==4 || b.length!==4) return false;
+    for(let i=0;i<4;i++){
+      if (b[i]==='*') continue;
+      if (a[i]!==b[i]) return false;
+    }
+    return true;
+  }
+
+  function isAllowed(ip, rules){
+    // IPv4 apenas
+    const isV4 = /^\d+\.\d+\.\d+\.\d+$/.test(ip||'');
+    if (!isV4){
+      // se não identificar IP público e ALLOW_LOCAL=true, libera (útil p/ dev com NAT)
+      if (ALLOW_LOCAL && (!ip || ip === '::1' || ip === '127.0.0.1')) return true;
+      return false;
+    }
+
+    // Opcional: liberar redes privadas quando ip público falhar (em certos proxies)
+    if (ALLOW_LOCAL){
+      if (ip.startsWith('10.') || ip.startsWith('192.168.') || /^172\.(1[6-9]|2\d|3[0-1])\./.test(ip)) return true;
+      if (ip === '127.0.0.1') return true;
+    }
+
+    for (const r of rules){
+      if (r.includes('/')) { if (cidrMatch(ip, r)) return true; }
+      else if (r.includes('*')) { if (wildcardMatch(ip, r)) return true; }
+      else if (r === ip) return true;
+    }
+    return false;
+  }
+
+  /* =======================
+   * UI Blocker
+   * ======================= */
+  const blocker = document.getElementById('ipBlocker');
+  const elIp    = document.getElementById('ipBlockerClientIp');
+  const btnRet  = document.getElementById('ipBlockerRetry');
+  const btnRel  = document.getElementById('ipBlockerReload');
+
+  function showBlock(ip){
+    if (elIp) elIp.textContent = ip || '—';
+    blocker?.classList.add('show');
+    // impede foco/tab atrás
+    document.body.setAttribute('aria-hidden','true');
+  }
+  function hideBlock(){
+    blocker?.classList.remove('show');
+    document.body.removeAttribute('aria-hidden');
+  }
+
+  async function runCheck(){
+    const killer = new Promise((_,rej)=> setTimeout(()=> rej(new Error('timeout')), CHECK_TIMEOUT));
+    try{
+      const [text, ip] = await Promise.race([Promise.all([fetchAllowList(), fetchClientIp()]), killer]);
+      const rules = parseRules(text);
+      const ok = isAllowed(ip, rules);
+      (ok ? hideBlock : showBlock)(ip);
+      window.WV_IP = { allowed: !!ok, ip, rules };
+    }catch(e){
+      // Qualquer erro -> bloqueia por padrão
+      console.warn('[IP-Guard] bloqueado:', e);
+      showBlock('');
+      window.WV_IP = { allowed:false, ip:'', rules:[] };
+    }
+  }
+
+  // BINDs
+  btnRet?.addEventListener('click', runCheck);
+  btnRel?.addEventListener('click', ()=> location.reload());
+
+  // inicia
+  showBlock('…'); // mostra até validar
+  runCheck();
+
+})();
+</script>
+<<!// BLOCK IP - FIM>
+
 </body>
 </html>
